<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/strRodape"
        android:id="@+id/textView2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strDieta"
        android:id="@+id/btDieta"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/btCadAlimento"
        android:layout_alignStart="@+id/btCadAlimento" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strExercicios"
        android:id="@+id/btExercicio"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/btCadAlimento"
        android:layout_alignEnd="@+id/btCadAlimento" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strCadastrarAlimentos"
        android:id="@+id/btCadAlimento"
        android:layout_below="@+id/btDieta"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strCadastrarExercicios"
        android:id="@+id/btCadExercicio"
        android:layout_below="@+id/btCadAlimento"
        android:layout_alignLeft="@+id/btCadAlimento"
        android:layout_alignStart="@+id/btCadAlimento" />

    <ImageView
        android:scaleType="fitStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
